initialize multiple servers